--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -65,16 +65,20 @@
                     android:textStyle="bold" />
 
                 <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                    app:counterEnabled="true"
+                    app:counterMaxLength="9">
 
                     <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/e_text_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Name"
+                        android:maxLines="1"
+                        android:maxLength="9"
                         android:gravity="center"
                         android:textColor="@color/black"
                         android:textColorHint="@color/grey"/>
