--- a/app/src/main/res/layout/fragment_score.xml
+++ b/app/src/main/res/layout/fragment_score.xml
@@ -101,7 +101,7 @@
                 android:text="1"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:gravity="center">
 
             </TextView>
@@ -131,8 +131,9 @@
                 android:gravity="center"
                 android:text=""
                 android:textColor="@color/black"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
+                android:maxLines="1"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="NAME">
             </TextView>
@@ -161,7 +162,7 @@
                 android:gravity="center"
                 android:text=""
                 android:textColor="@color/black"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 tools:text="10">
             </TextView>
@@ -187,7 +188,7 @@
                 android:text="2"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:gravity="center">
 
             </TextView>
@@ -217,8 +218,9 @@
                 android:gravity="center"
                 android:text=""
                 android:textColor="@color/black"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
+                android:maxLines="1"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="NAME">
             </TextView>
@@ -247,7 +249,7 @@
                 android:gravity="center"
                 android:text=""
                 android:textColor="@color/black"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 tools:text="10">
             </TextView>
@@ -273,7 +275,7 @@
                 android:text="3"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:gravity="center">
 
             </TextView>
@@ -303,8 +305,9 @@
                 android:gravity="center"
                 android:text=""
                 android:textColor="@color/black"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
+                android:maxLines="1"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="NAME">
             </TextView>
@@ -333,7 +336,7 @@
                 android:gravity="center"
                 android:text=""
                 android:textColor="@color/black"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 tools:text="10">
             </TextView>
@@ -359,7 +362,7 @@
                 android:text="4"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:gravity="center">
 
             </TextView>
@@ -389,8 +392,9 @@
                 android:gravity="center"
                 android:text=""
                 android:textColor="@color/black"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
+                android:maxLines="1"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="NAME">
             </TextView>
@@ -419,7 +423,7 @@
                 android:gravity="center"
                 android:text=""
                 android:textColor="@color/black"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 tools:text="10">
             </TextView>
@@ -445,7 +449,7 @@
                 android:text="5"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:gravity="center">
 
             </TextView>
@@ -475,8 +479,9 @@
                 android:gravity="center"
                 android:text=""
                 android:textColor="@color/black"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
+                android:maxLines="1"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="NAME">
             </TextView>
@@ -505,7 +510,7 @@
                 android:gravity="center"
                 android:text=""
                 android:textColor="@color/black"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 tools:text="10">
             </TextView>
