--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -67,37 +67,53 @@
                 android:orientation="vertical"
                 android:padding="15dp">
 
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
 
+                <TextView
+                    android:id="@+id/text_view_spl"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
+                    android:ellipsize="marquee"
+                    android:gravity="left"
+                    android:maxLines="1"
+                    android:text="Spieler:     "
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold">
 
+                </TextView>
 
 
                 <TextView
                     android:id="@+id/text_view_name"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="25dp"
+                    android:ellipsize="marquee"
                     android:gravity="center"
+                    android:maxLines="1"
+                    android:text="@{String.valueOf(resultViewModel.sname)}"
                     android:textColor="@color/black"
+                    android:layout_marginTop="25dp"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:maxLines="1"
-                    android:ellipsize="marquee"
-                    android:text="@{String.valueOf(resultViewModel.sname)}"
                     tools:text="user"></TextView>
-
-
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/text_view_highscore"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:gravity="center"
+                    android:gravity="left"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:text="@{`Dein Score: ` + String.valueOf(resultViewModel.score)}"
-                    tools:text="Dein score ist"></TextView>
+                    android:text="@{`Score:     ` + String.valueOf(resultViewModel.score)}"
+                    tools:text="Score:"></TextView>
 
                 <Button
                     android:id="@+id/button_ende"
